# Master_thesis

./: .gitignore  README.md  setup.sh
bag_files/: bagtocsv_converter.py  db3_to_mcap.py  mcap_to_csv.py
bag_files/subset/: metadata.yaml
bag_files/subset/subset_0/: sim_car_set_control.csv
bag_files/subset1/: metadata.yaml
bag_files/subset1/subset1_0/: sim_car_set_control.csv
bag_files/subset2/: metadata.yaml
bumper_cars/: CMakeLists.txt  package.xml  params.json  setup.cfg  setup.py
bumper_cars/bumper_cars/: collision_avoidance_ros2.py  csv_plot.py  joy_safety.py  state_buffer.py  wheel_joystick_remap.py
bumper_cars/bumper_cars/classes/: CarModel.py  Controller.py  State.py
bumper_cars/bumper_cars/utils/: car_utils.py
bumper_cars/config/: carModel.yaml  controller.yaml
bumper_cars/launch/: bench.sh  collision-avoidance.launch.py
bumper_cars/lib/: model-driving
bumper_cars/src/: driving_dynamics_test.cpp  modelStep.cpp
bumper_msgs/: CMakeLists.txt  package.xml
bumper_msgs/srv/: CarCommand.srv  CarPredict.srv  EnvState.srv  MainControl.srv  TrackState.srv  TrajState.srv
cbf_dev/: package.xml  setup.py
cbf_dev/cbf_dev/: C3BF.py  CBF.py  try.py
dwa_dev/: package.xml  setup.py
dwa_dev/config/: dwa_config.json
dwa_dev/dwa_dev/: DWA.py  generate_trajectories.py  view_trajs.py
lbp_dev/: setup.py
lbp_dev/lbp_dev/: LBP.py  generate_trajectories_LBP.py  lattice.py  view_trajs.py
log/: latest_build
mpc_dev/mpc_dev/: MPC.py  MPC_GPU.py
ros-g29-force-feedback/config/: g29.yaml
ros-g29-force-feedback/launch/: g29_feedback.launch.py
ros-g29-force-feedback/src/: g29_force_feedback.cpp
seed_simulation/seed_simulation/: seed_sim.csv
src/apf_dev/: package.xml  setup.cfg  setup.py
src/apf_dev/apf_dev/: APF.py
src/bumper_cars/: init.json  params.json  params_small.json
src/cbf_dev/cbf_dev/: C3BF.py  C3BF_imp_plotter.py  CBF-LBP.py  CBF-MPC.py  CBF_LBP.py  CBF_LBP_dilated_traj.pkl  CBF_LBP_trajectories.pkl  CBF_MPC.py  CBF_MPC_dilated_traj.pkl  CBF_MPC_trajectories.pkl  CBF_simple.py  CBF_smaller.py  CBF_trajectories.pkl  LBP_dilated_traj_harem.pkl  LBP_trajectories_harem.pkl
src/drl_dev/: package.xml  setup.cfg  setup.py
src/drl_dev/drl_dev/: DRL.ipynb
src/dwa_dev/: dynamic_trajectories.json  package.xml  setup.py  trajectories.json
src/dwa_dev/dwa_dev/: DWA.py  DWA_dilated_traj.pkl  DWA_dilated_traj_harem.pkl  DWA_trajectories.pkl  DWA_trajectories_harem.pkl  DWA_trajectory_following.py.py  generate_trajectories.py
src/dwa_dev/launch/: dwa.launch.py
src/lbp_dev/lbp_dev/: LBP.json  LBP.py  LBP_dilated_traj.pkl  LBP_trajectories.pkl  LBP_trajectories_harem.pkl  generate_trajectories_LBP.py  lattice.py  lattice_look_up.py  lattice_motion_model.py  lattice_planner.py  lbp_trajectory_following.py
src/mpc_dev/mpc_dev/: CBF_MPC_dilated_traj.pkl  CBF_MPC_trajectories.pkl  (+7 more)
src/planner/: create_animation.py
src/seeds/: circular_seed_64.json  seed_10.json  seed_11.json  seed_8.json  seed_9.json
(+48 files in other folders)
