<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bumper_cars</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="buranig@student.ethz.ch">giacomo</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>functools</depend>
  <depend>turtlesim</depend>
  <depend>custom_message</depend>
  <depend>pygame</depend>
  <depend>math</depend>
  <depend>matplotlib</depend>
  <depend>numpy</depend>
  <depend>time</depend>
  <depend>message_filters</depend>
  <depend>random</depend>
  <depend>cvxopt</depend>
  <depend>scipy</depend>
  <depend>pathlib</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>simulation_driving_ros2</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Custom dependencies -->
  <depend>lar_msgs</depend>
  <depend>lar_utils</depend>
  <depend>dwa_dev</depend>
  <depend>rosidl_default_generators</depend>

  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
